
- #11476: Add examples in documentation of Hashtbl, Queue, Atomic, Format
  (Simon Cruanes, review by Yotam Barnoy, Gabriel Scherer, Daniel Bünzli,
   Ulugbek Abdullaev, and Nicolás Ojeda Bär)

### Other libraries:

- #11475: Make Unix terminal interface bindings domain-safe
  (Olivier Nicole and Xavier Leroy, review by Xavier Leroy)

### Tools:

- #9290: Add a directive to switch off debugging in toplevel.
  This allows to see optimized bytecode with -dlambda.
  (Jacques Garrigue, review by Gabriel Scherer)

- #11166: ocamllex: the union of two character sets "cset1 | cset2" can now be
  used in any context where a character set is expected.
  (Nicolás Ojeda Bär, Martin Jambon, review by Sébastien Hinderer)

### Manual and documentation:

- #9430, #11291: Document the general desugaring rules for binding operators.
  (Gabriel Scherer, review by Nicolás Ojeda Bär)

- #11481: Fix the type of Unix.umask to Unix.file_perm -> Unix.file_perm
  (Favonia, review by Sébastien Hinderer)

### Compiler user-interface and warnings:

- #11530: Include kinds in kind mismatch error message.
  (Leonhard Markert, review by Gabriel Scherer and Florian Angeletti)

- #10818: Preserve integer literal formatting in type hint.
  (Leonhard Markert, review by Gabriel Scherer and Florian Angeletti)

- #11338: Turn some partial application warnings into hints.
  (Leo White, review by Stephen Dolan)

- #10911: Improve the location reported by parenthesized assert expressions
  (Fabian Hemmer, review by Gabriel Scherer)

- #1391, #7645, #3922: Add an early error when compiling different
  modules with mismatching -for-pack
  (Pierre Chambart and Vincent Laviron, review by Mark Shinwell)

### Internal/compiler-libs changes:
- #11027: Separate typing counter-examples from type_pat into retype_pat;
  type_pat is no longer in CPS.
  (Jacques Garrigue and Takafumi Saikawa, review by Gabriel Scherer)

- #11018: Clean up Types.Variance, adding a description of the lattice used,